# db2driver-node

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/: .release-please-manifest.json  release-please-config.json
.github/workflows/: ci.yml  docs.yml  release.yml
crates/db2-client/: Cargo.toml
crates/db2-client/src/: auth.rs  column.rs  config.rs  connection.rs  cursor.rs  error.rs  lib.rs  pool.rs  row.rs  statement.rs  transaction.rs  transport.rs  types.rs
crates/db2-napi/: CHANGELOG.md  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
crates/db2-napi/crates/db2-napi/: CHANGELOG.md
crates/db2-napi/scripts/: verify-prepublish.cjs
crates/db2-napi/src/: js_connection.rs  js_pool.rs  js_statement.rs  js_transaction.rs  js_types.rs  lib.rs
crates/db2-proto/: Cargo.toml
crates/db2-proto/src/: codepage.rs  codepoints.rs  ddm.rs  dss.rs  fdoca.rs  lib.rs  secmec9.rs  types.rs
crates/db2-proto/src/commands/: accrdb.rs  accsec.rs  clsqry.rs  cntqry.rs  excsat.rs  excsqlimm.rs  excsqlstt.rs  mod.rs  opnqry.rs  prpsqlstt.rs  rdbcmm.rs  rdbrllbck.rs  secchk.rs  sqlattr.rs  sqlstt.rs
crates/db2-proto/src/replies/: accrdbrm.rs  accsecrd.rs  endqryrm.rs  exsatrd.rs  mod.rs  opnqryrm.rs  qrydta.rs  secchkrm.rs  sqlcard.rs  sqldard.rs  sqlerrrm.rs
docker/: docker-compose.yml
docker/seed/: 01-create-tables.sql  02-seed-data.sql  03-create-procs.sql
docs/: hugo.toml
docs/content/: _index.md
docs/content/api-reference/: _index.md
docs/content/architecture/: _index.md
docs/content/contributing/: _index.md
docs/content/getting-started/: _index.md
docs/content/protocol/: _index.md  code-points.md  connection-flow.md  data-encoding.md  ddm-objects.md  dss-framing.md  query-flow.md
docs/themes/db2-node-theme/layouts/partials/: head.html
docs/themes/db2-wire-theme/: theme.toml
docs/themes/db2-wire-theme/layouts/: index.html
docs/themes/db2-wire-theme/layouts/_default/: list.html  single.html
docs/themes/db2-wire-theme/layouts/partials/: footer.html  head.html  nav.html
docs/themes/db2-wire-theme/static/css/: style.css
examples/: demo-million.ts  demo.ts
examples/todo-app/: .gitignore  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/todo-app/src/: db.ts
examples/todo-app/src/routes/: __root.tsx  index.tsx
examples/todo-app/src/server/: todos.ts
tests/common/: mod.rs
tests/integration/: Cargo.toml  connection_test.rs  edge_cases_test.rs  pool_test.rs  prepared_stmt_test.rs  query_test.rs  transaction_test.rs  types_test.rs
tests/integration/src/: lib.rs
tests/node/: connection.test.ts  package.json  tls.test.ts
tests/protocol/: Cargo.toml  codepage_test.rs  ddm_test.rs  dss_test.rs
tests/protocol/src/: lib.rs
tools/: capture-fixtures.sh  db2.sh
